@@ -56,6 +56,7 @@ class View{
   int yangle;                                  /// Vertical View
   bool shaded;                                 /// Whether to use shading view
   int shade[3];                                /// Shading incident light angles (x,y,z)
+  int max_layers;			       /// Maximum number of quality layers allowed
   int layers;			               /// Number of quality layers
 
   /// Constructor
@@ -67,7 +68,7 @@ class View{
     contrast = 1.0;
     xangle = 0; yangle = 90;
     shaded = false; shade[0] = 0; shade[1] = 0; shade[2] = 0;
-    layers = 1;
+    max_layers = 0; layers = 0;
   };
 
 
@@ -162,10 +163,13 @@ class View{
   void setImageSize( unsigned int w, unsigned int h ){ width = w; height = h; };
 
 
+  /// Limit the maximum number of quality layers we are allowed to decode
+  /** \param l Max number of layers to decode */
+  void setMaxLayers( int l ){ max_layers = l; };
+
   /// Set the number of quality layers to decode
   /** \param l Number of layers to decode */
   void setLayers( int l ){ layers = l; };
-
 
   /// Return the contrast adjustment
   float getContrast(){ return contrast; };
@@ -189,7 +193,10 @@ class View{
   unsigned int getViewHeight();
 
   /// Return the number of layers to decode
-  unsigned int getLayers(){ return layers; };
+  unsigned int getLayers(){ 
+    if( layers > max_layers ) layers = max_layers;
+    return layers;
+  };
 
   /// Indicate whether the viewport has been set
   bool viewPortSet();
